# learner-rv

./: .ascii-to-svg-manifest.json  .env.example  .gitignore  BUILDING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.claude/skills/learn-rv/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/learn-acquire/: Cargo.toml
crates/learn-acquire/fuzz/: Cargo.toml  README.md
crates/learn-acquire/fuzz/fuzz_targets/: parse_vtt.rs
crates/learn-acquire/src/: lib.rs  vtt.rs
crates/learn-asr/: Cargo.toml
crates/learn-asr/src/: audio.rs  download.rs  engine.rs  lib.rs
crates/learn-chat/: Cargo.toml
crates/learn-chat/src/: lib.rs  persist.rs  prompt.rs
crates/learn-chunk/: Cargo.toml
crates/learn-chunk/src/: lib.rs
crates/learn-cli/: Cargo.toml
crates/learn-cli/src/: cloud.rs  commands.rs  main.rs  map.rs  push.rs  quiz.rs  summary.rs
crates/learn-coherence/: Cargo.toml
crates/learn-coherence/src/: lib.rs
crates/learn-core/: Cargo.toml
crates/learn-core/src/: lib.rs
crates/learn-discover/: Cargo.toml
crates/learn-discover/src/: curate.rs  harvest.rs  lib.rs  score.rs
crates/learn-embed/: Cargo.toml
crates/learn-embed/src/: download.rs  lib.rs  tokenize.rs
crates/learn-eval/: Cargo.toml
crates/learn-eval/src/: lib.rs
crates/learn-eval/tests/fixtures/: golden_sample.yaml
crates/learn-frames/: Cargo.toml
crates/learn-frames/src/: decide.rs  lib.rs
crates/learn-graph/: Cargo.toml
crates/learn-graph/src/: lib.rs
crates/learn-index/: Cargo.toml
crates/learn-index/src/: lib.rs
crates/learn-reasoning/: Cargo.toml
crates/learn-reasoning/src/: lib.rs
crates/learn-retrieve/: Cargo.toml
crates/learn-retrieve/src/: bm25.rs  fuse.rs  lib.rs  mmr.rs  tests.rs
crates/learn-serve/: Cargo.toml
crates/learn-serve/src/: http.rs  lib.rs  protocol.rs  tools.rs  witness.rs
crates/learn-serve/tests/: mcp_integration.rs
crates/learn-serve/ui/: index.html
crates/learn-synth/: Cargo.toml
crates/learn-synth/src/: aimds.rs  lib.rs
docs/: phase2-design.md  phase25-design.md  testing.md
docs/adr/: ADR-001-elite-roadmap.md
docs/ddd/: DDD-001-bounded-contexts.md
fixtures/: README.md  short.info.json  short.vtt
scripts/: release.sh
tests/: Cargo.toml  generate_fixtures.sh
tests/src/: lib.rs
tests/tests/: integration_smoke.rs  orientation.rs
