[package]
name = "learn-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Workspace-level integration tests for learn-rs."

[dependencies]
learn-core.workspace = true
learn-acquire.workspace = true
anyhow.workspace = true
serde_json.workspace = true
camino.workspace = true
tokio = { version = "1", features = ["full"] }
