[package]
name = "learn-acquire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "yt-dlp wrapper and VTT parser for learn-rs."

[dependencies]
learn-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
camino.workspace = true
url.workspace = true
tokio.workspace = true
regex = "1"

[dev-dependencies]
tempfile = "3"
