[package]
name = "learn-chunk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Semantic, sentence-aware chunker with topic-shift detection."

[dependencies]
learn-core.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1"
