[package]
name = "learn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "learn — pure-Rust video knowledge-base CLI."

[[bin]]
name = "learn"
path = "src/main.rs"

[dependencies]
learn-core.workspace = true
learn-acquire.workspace = true
learn-chat.workspace = true
learn-frames.workspace = true
learn-chunk.workspace = true
learn-coherence.workspace = true
learn-discover.workspace = true
learn-embed.workspace = true
learn-index.workspace = true
learn-graph.workspace = true
learn-retrieve.workspace = true
learn-synth.workspace = true
learn-eval.workspace = true
learn-serve.workspace = true

async-trait = "0.1"
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
camino.workspace = true
url.workspace = true
serde_json.workspace = true
uuid.workspace = true
dirs = "6"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
colored = "2"
which = "7"
