[package]
name = "learn-discover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Autonomous curriculum discovery — given a topic description, find the top videos worth ingesting."

[dependencies]
learn-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
