[package]
name = "learn-frames"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Keyframe extraction + Sonnet-vision captioning for Learn-RV ingest"

[dependencies]
learn-core    = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
camino        = { workspace = true }
reqwest       = { version = "0.12", features = ["json"] }
base64        = "0.22"
image         = { version = "0.25", default-features = false, features = ["jpeg"] }
image_hasher  = "3"

[dev-dependencies]
tempfile = "3"
