[package]
name = "learn-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "learn-serve — MCP server exposing the KB as a tool surface for Claude Code-driven processes."

[dependencies]
learn-core.workspace = true
learn-index.workspace = true
learn-retrieve.workspace = true
learn-synth.workspace = true
learn-embed.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
camino.workspace = true
blake3 = "1"
chrono.workspace = true
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
serde_json.workspace = true
